--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <br>周りの人と協力して取り組んだ経験を簡潔に述べよ。その取り組みの中での自分の役割を述べよ。
 <br>活動の中でどんな役割を担っていましたか??
 <br>なぜその役割を担ったのか? 
-<br>他の人との役割の違いは? 
+<br>他の人との役割の違いは? <br>
 <br>周りと連携するときに意識したことは? 
 <br>課題に対する他の打ち手は考えた? 
 <br>〇〇を達成する上でどういった努力をしたのか
@@ -195,7 +195,7 @@
 <br>君が弊社で働く時に与えられる機能や役割を言えるだけいってほしい
 <br>その能力弊社で活かせますか
 <br>強みを当社でどう活かしますか?
-<br>あなたが入社したら、当社にどのようなメリットがあります<br>
+<br>あなたが入社したら、当社にどのようなメリットがあります
 <br>弊社を受けに来た理由
 <br>弊社で挑戦したいこと
 <br>志望動機を教えてください
@@ -219,7 +219,7 @@
 最後に質問ありますか?
 <br>最後に伝えたいことがあればお願いします。
 <br>その質問の意図は？
-<br>その質問に至った経緯や経験
+<br>その質問に至った経緯や経験<br>
 
 </body>
 </html>
