--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <br>周りの人と協力して取り組んだ経験を簡潔に述べよ。その取り組みの中での自分の役割を述べよ。
 <br>活動の中でどんな役割を担っていましたか??
 <br>なぜその役割を担ったのか? 
-<br>他の人との役割の違いは? <br>
+<br>他の人との役割の違いは?
 <br>周りと連携するときに意識したことは? 
 <br>課題に対する他の打ち手は考えた? 
 <br>〇〇を達成する上でどういった努力をしたのか
