--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<h2>ツイッターで集めた採用面接過去問</h2>
+<h4>ツイッターで集めた採用面接過去問</h4>
 <h3>過去について</h3>
 自分史を語ってください
 <br>幼少期はどんなこどもでしたか？
@@ -147,7 +147,7 @@
 <br>特技
 <br>休みの日は何をすることが多いですか？
 
-<n3>未来について</n3>
+<h3>未来について</h3>
 あなたの夢は何ですか？
 <br>何で成長したいの？
 <br>役員になりたい?
@@ -230,7 +230,7 @@
 最後に質問ありますか?
 <br>最後に伝えたいことがあればお願いします。
 <br>その質問の意図は？
-<br>その質問に至った経緯や経験<br>
+<br>その質問に至った経緯や経験
 
 </body>
 </html>
