--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <br>・困難を乗り越える際に、自分なりに工夫したことや心掛けたことは?それはなぜ?
 <br>・その活動の中学んだことを、（業種）の仕事でどう活かせるのか？
 <br>・活動を頑張ったと思うんだけど、頑張れたモチベーションの源泉を教えて
-<br>・もう1度その経験をやり直すとしたら、改善点は?どこを、どうて改善する?
+<br>・もう1度その経験をやり直すとしたら、改善点は?どこを、どう改善する?
 <br>・大学時代に大変だったこと
 <br>・学生時代にぶつかった壁は?
 <br>・どうやって壁を乗り越えた?
