--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<h4>ツイッターで集めた採用面接過去問</h4>
+<p>ツイッターで集めた採用面接過去問</p>
 <h3>過去について</h3>
 ・自分史を語ってください
 <br>・幼少期はどんなこどもでしたか？
@@ -29,11 +29,13 @@
 <br>・ガクチカ二個目
 <br>・ガクチカ三個目
 <br>・学生時代に最も力を入れたこと・最も努力したことは何ですか？
+<br>・活動を頑張ったと思うんだけど、頑張れたモチベーションの源泉を教えて
 <br>・大学生活を一言で表すと？
 <br>・学生時代の成果
 <br>・学生時代に注力した割合を教えてください（例：サークル30、アルバイト40、勉強30）
 <br>・なぜそれを頑張ったのか? 
 <br>・取組の中で最も大変だったことは?
+<br>・チームを巻き込んでチャレンジしたことは？
 <br>・周りの人と協力して取り組んだ経験を簡潔に述べよ。その取り組みの中での自分の役割を述べよ。
 <br>・活動の中でどんな役割を担っていましたか??
 <br>・なぜその役割を担ったのか? 
@@ -47,7 +49,6 @@
 <br>・その活動の中で、失敗したことを教えて?(困難とは別!)
 <br>・困難を乗り越える際に、自分なりに工夫したことや心掛けたことは?それはなぜ?
 <br>・その活動の中学んだことを、（業種）の仕事でどう活かせるのか？
-<br>・活動を頑張ったと思うんだけど、頑張れたモチベーションの源泉を教えて
 <br>・もう1度その経験をやり直すとしたら、改善点は?どこを、どう改善する?
 <br>・大学時代に大変だったこと
 <br>・学生時代にぶつかった壁は?
@@ -57,6 +58,8 @@
 <br>・過去最大の失敗談を教えてください。
 <br>・どうやってその失敗を乗り越えた？
 <br>・乗り越えたらどうなった？
+<br>・人生のターニングポイントを教えて？
+<br>・人生の中で挫折経験は何がある？
 <br>・どんなアルバイトをしましたか？そこから何を学びましたか？
 <br>・バイトで1番苦労したこと
 <br>・あなたのサークルは、どんな活動をするサークルなのですか？
@@ -78,6 +81,7 @@
 <br>・なぜそのテーマにしたの？
 <br>・どんな勉強をしてきましたか？
 <br>・学んだことへの深堀(どうやって今後生かすのか)
+<br>・自分のゼミや研究分野についてわかりやすく説明して
 <br>・研究と社会ってどのようにつながってると思う？
 <br>・研究内容は（業界）の仕事に関係無いと思うけどどう思う？
 <br>・大学と学部を選んだ理由
@@ -106,21 +110,28 @@
 <br>・あなたの短所・弱みは何ですか？
 <br>・その弱みをどう克服しますか? 
 <br>・短所を改善するために取り組んでいることはありますか？
+<br>・他に就活生と比べてあなたが劣っていると思っている点は何ですか？
 <br>・あなたの長所は何ですか？
 <br>・あなたの強みは?
 <br>・「これだけは人に負けない」というものは何ですか？
 <br>・あなたには何ができるのか？
 <br>・あなたを色で例えると
+<br>・あなたを動物で例えると
+<br>・あなたを惑星で例えると（太陽は恒星だからね(# ﾟДﾟ)）
 <br>・友人からはどんな存在だと言われますか?
 <br>・あなたが大切にしている言葉を教えてください
 <br>・好きな言葉はなに？
+<br>・メアドの意味を教えてください
 <br>・あなたのこだわりは何ですか？
+<br>・あなたの取扱説明書を教えてください
+<br>・あなたにとってコミュニケーションとは
 <br>・就活の軸
 <br>・企業選びの基準を教えてください
 <br>・企業選びで大切にしていることを教えてください
 <br>・あなたの就活観を教えてください
 <br>・自分が取り組んでいる活動の中で、どんな課題がある?またどうやって解決する?
 <br>・気になる社会課題とどうやって解決する?
+<br>・君が感じた社会の理不尽は？それをどう解決する？
 <br>・君にとってのリーダーの定義は?
 <br>・いまどんなスキルがある?
 <br>・英語はどの程度できますか？
@@ -136,15 +147,18 @@
 <br>・とても大きな商談の日にクレームが入ったらどうしますか？
 <br>・忙しくて高収入の仕事、給料安くてやりがいのある仕事どっちがいい？
 <br>・一つ夢がかなうとしたら何をお願いしますか？
+<br>・トロッコ問題
 <br>・最近読んだ本で、最も興味を持ったのは何ですか？どこがおもしろかったのですか？
 <br>・最近の気になったニュースは何ですか？
+<br>・今朝のニュースで気になったこととそれについてどう考えるか
 <br>・時事問題に対する自分の意見
+<br>・最新の（業界）ニュースについて
 <br>・女子なのになぜスカートじゃないんですか？
 <br>・外見をディスられる
 <br>・親の職業は何ですか？
 <br>・残りの単位数は？
 <br>・十八番は？
-<br>・趣味
+<br>・好きなこと・趣味三つとそれぞれの魅力
 <br>・特技
 <br>・休みの日は何をすることが多いですか？
 
@@ -154,6 +168,7 @@
 <br>・役員になりたい?
 <br>・あなたにとって働くとは?
 <br>・上司と意見が合わなかったら?
+<br>・上司の不正を見つけたら？
 <br>・希望の配属先に行けなかったらどうしますか？
 <br>・希望の勤務地はありますか？
 <br>・海外勤務や工場勤務は問題ないか
@@ -178,6 +193,7 @@
 <br>・インターネット・ソーシャルメディアによって、今後何が変わりますか？
 <br>・これからとりたいと思っている資格はありますか？
 <br>・結婚したら会社はどうしますか？
+<br>・なんで院や博士をめざさないで、就職したいの？
 
 <h3>御社について</h3>
 ・面接官の第一印象は?
@@ -197,7 +213,8 @@
 <br>・受験して落ちた企業はありますか？なぜ落ちたんですか？
 <br>・10年後うちの会社はどうなっている?
 <br>・他の競合他社と比べて、うちは第何志望?それはなんで?
-<br>・春採用をなぜ受けなかったのですか？（秋採用）
+<br>・春採用をなぜ受けなかったのですか？（夏秋冬採用）
+<br>・第一志望の企業はどこだった？どの選考段階で落ちた？なぜそこに落ちたと思う？その改善のために何をした？その対策がこの面接のどこに現れている？
 <br>・弊社の志望度を教えてください
 <br>・当社は第一志望ですか？
 <br>・もし当社の結果が思わしくなかった場合、どこの企業に行きますか？
@@ -207,9 +224,11 @@
 <br>・君が弊社で働く時に与えられる機能や役割を言えるだけいってほしい
 <br>・その能力弊社で活かせますか
 <br>・強みを当社でどう活かしますか?
-<br>・あなたが入社したら、当社にどのようなメリットがあります
+<br>・あなたが入社したら、当社にどのようなメリットがありますか
+<br>・他の学生でなく「なぜ君を雇うべき」なのか。採用すべき理由。貢献できる理由。
 <br>・弊社を受けに来た理由
 <br>・弊社で挑戦したいこと
+<br>・具体的に、当社で何をやりたいのか？それはなぜか？
 <br>・志望動機を教えてください
 <br>・それって他社でもできるよね？
 <br>・弊社の弱み
@@ -221,17 +240,22 @@
 <br>・ベンチャー企業と大手企業の違い
 <br>・（業界）を志望するようになったきっかけや背景を教えて
 <br>・なぜ、この業界を志望するのですか？
+<br>・三月はどの業界を見ていて、今はどの業界を見ている？業界を変えた理由は？
+<br>・将来社会人として「何を」成し遂げたいのか。それを「なぜ」成し遂げたいのか。他業界でなく「なぜこの業界」で成し遂げたいのか。
 <br>・なぜ、業界一位の会社を受けないんですか？
+<br>・なぜ、大企業じゃなくて中小を受けるの？
 <br>・（業界）と他業界との比較で、なんで（業界）なのか?自分の実体験をもとにその理由を教えて!
 <br>・この業界の仕事が無くなったらどうしますか?
 <br>・この業界のこの後について知っていますか？
 <br>・なぜその学部でこの業界？
+<br>・グループ会社の事業内容
+<br>・グループ会社の方が合ってるんじゃないですか？
 
 <h3>逆質問</h3>
 ・最後に質問ありますか?
 <br>・最後に伝えたいことがあればお願いします。
 <br>・その質問の意図は？
 <br>・その質問に至った経緯や経験
-
+<br>・他に聞きたいことは？他に聞きたいことは？他に聞きたいことは？他に聞きたいことは？他に聞きたいことは？
 </body>
 </html>
