--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<p>ツイッターで集めた採用面接過去問</p>
+<p>ツイッターで集めた採用面接過去問（2020/07/05更新）</p>
 <h3>過去について</h3>
 ・自分史を語ってください
 <br>・幼少期はどんなこどもでしたか？
