ツイッターカード

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta nama="Twitter:card" content="summary_large_image">
   <title>ツイッターで集めた採用面接過去問</title>
   <link rel="stylesheet" href="style.css">
 </head>
