ツイッターカード

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta nama="Twitter:card" content="summary_large_image">
+  
+  <meta name="Twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@anne_yamiaka" /> <!--②-->
+　<meta property="og:url" content="https://anya9999.github.io/quiz/index.html" /> <!--③-->
+　<meta property="og:title" content="ツイッターで集めた採用面接過去問" /> <!--④-->
+  <meta property="og:description" content="奇問多めです" /> <!--⑤-->
+  <meta property="og:image" content="IMG_0006.jpg" /> <!--⑥-->
+  
   <title>ツイッターで集めた採用面接過去問</title>
   <link rel="stylesheet" href="style.css">
 </head>
