--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:site" content="@anne_yamiaka" /> <!--②-->
 　<meta property="og:url" content="https://anya9999.github.io/quiz/index.html" /> <!--③-->
 　<meta property="og:title" content="ツイッターで集めた採用面接過去問" /> <!--④-->
-  <meta property="og:description" content="奇問多めです" /> <!--⑤-->
+  <meta property="og:description" content="奇問多めです。定番は把握している人向け。" /> <!--⑤-->
   <meta property="og:image" content="IMG_0006.jpg" /> <!--⑥-->
   
   <title>ツイッターで集めた採用面接過去問</title>
