--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 　<meta property="og:url" content="https://anya9999.github.io/quiz/index.html" /> <!--③-->
 　<meta property="og:title" content="ツイッターで集めた採用面接過去問" /> <!--④-->
   <meta property="og:description" content="奇問多めです。定番は把握している人向け。" /> <!--⑤-->
-  <meta property="og:image" content="11.jpg" /> <!--⑥-->
+  <meta property="og:image" content="12.jpg" /> <!--⑥-->
   
   <title>ツイッターで集めた採用面接過去問</title>
   <link rel="stylesheet" href="style.css">
@@ -28,6 +28,7 @@
 
 <body>
 <p>ツイッターで集めた採用面接過去問（2020/07/05更新）</p>
+奇問多めです。定番は把握している人向け。
 <h3>過去について</h3>
 ・自分史を語ってください
 <br>・幼少期はどんなこどもでしたか？
