--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-<p>ツイッターで集めた採用面接過去問（2020/07/05更新）奇問多めです。定番は把握している人向け。</p>
-
+<p>ツイッターで集めた採用面接過去問（2020/07/05更新）</p>
+<p>奇問多めです。定番は把握している人向け。</p>
 <h3>過去について</h3>
 ・自分史を語ってください
 <br>・幼少期はどんなこどもでしたか？
