--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 <p>ツイッターで集めた採用面接過去問（2020/07/05更新）</p>
 <p>奇問多めです。定番は把握している人向け。</p>
-<h3> 過去について</h3>
+<h3> ・過去について・</h3>
 ・自分史を語ってください
 <br>・幼少期はどんなこどもでしたか？
 <br>・中学時代はどんな生徒でしたか？
@@ -106,7 +106,7 @@
 <br>・コロナ中何をしていた？
 <br>・コロナ中に何を考えた？
 
-<h3> 今について</h3>
+<h3> ・今について・</h3>
 ・1分で自己PRお願いします
 <br>・一言でいうと、あなたはどんな人ですか？
 <br>・自分をどんなキャラだと認識しているか
@@ -171,7 +171,7 @@
 <br>・特技
 <br>・休みの日は何をすることが多いですか？
 
-<h3> 未来について</h3>
+<h3> ・未来について・</h3>
 ・あなたの夢は何ですか？
 <br>・何で成長したいの？
 <br>・役員になりたい?
@@ -204,7 +204,7 @@
 <br>・結婚したら会社はどうしますか？
 <br>・なんで院や博士をめざさないで、就職したいの？
 
-<h3> 御社について</h3>
+<h3> ・御社について・</h3>
 ・面接官の第一印象は?
 <br>・社長の印象はいかがですか？
 <br>・弊社をどこで知りましたか？
@@ -244,7 +244,7 @@
 <br>・当社の改善点・課題は何だと思いますか？
 <br>・この会社は今後どうあるべき？
 
-<h3> 業界や職種について</h3>
+<h3> ・業界や職種について・</h3>
 ・希望職種と理由を教えて下さい
 <br>・ベンチャー企業と大手企業の違い
 <br>・（業界）を志望するようになったきっかけや背景を教えて
@@ -260,7 +260,7 @@
 <br>・グループ会社の事業内容
 <br>・グループ会社の方が合ってるんじゃないですか？
 
-<h3> 逆質問</h3>
+<h3> ・逆質問・</h3>
 ・最後に質問ありますか?
 <br>・最後に伝えたいことがあればお願いします。
 <br>・その質問の意図は？
