--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:site" content="@anne_yamiaka" /> <!--②-->
 　<meta property="og:url" content="https://anya9999.github.io/quiz/index.html" /> <!--③-->
 　<meta property="og:title" content="ツイッターで集めた採用面接過去問" /> <!--④-->
-  <meta property="og:description" content="奇問多めです。定番は把握している人向け。" /> <!--⑤-->
+  <meta property="og:description" content="奇問多めです。定番は既に把握している人向け。" /> <!--⑤-->
   <meta property="og:image" content="12.jpg" /> <!--⑥-->
   
   <title>ツイッターで集めた採用面接過去問</title>
@@ -28,7 +28,7 @@
 
 <body>
 <p>ツイッターで集めた採用面接過去問（2020/07/05更新）</p>
-<p>奇問多めです。定番は把握している人向け。</p>
+<p>奇問多めです。定番は既に把握している人向け。</p>
 <h3> ・過去について・</h3>
 ・自分史を語ってください
 <br>・幼少期はどんなこどもでしたか？
